module/core/derive_tools/tests/inc/add/compile_fails/string_field_manual.stderr
error[E0308]: mismatched types
  --> tests/inc/add/compile_fails/string_field_manual.rs
   |
   |       x : self.x + other.x, // will not compile with other: String. Could compile with &String or &str
   |                    ^^^^^^^ expected `&str`, found `String`
   |
help: consider borrowing here
   |
14 |       x : self.x + &other.x, // will not compile with other: String. Could compile with &String or &str
   |                    +

error[E0369]: cannot subtract `String` from `String`
 --> tests/inc/add/compile_fails/string_field_manual.rs
  |
  |       x : self.x - other.x,
  |           ------ ^ ------- String
  |           |
  |           String
  |
note: the foreign item type `String` doesn't implement `Sub`
 --> $RUST/alloc/src/string.rs
  |
  | pub struct String {
  | ^^^^^^^^^^^^^^^^^ not implement `Sub`
